# cdd-control-plane

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  cobertura.xml  lcov.info  patch_crypto.patch  update_models.py
.github/workflows/: ci.yml
migrations/20260615034423_create_user_tokens/: up.sql
migrations/20260615034840_create_audit_logs/: up.sql
src/: config.rs  crypto.rs  error.rs  error.rs.orig  lib.rs  main.rs  main.rs.orig  main.rs.rej  queue.rs
src/api/: audit.rs  auth.rs  auth_middleware.rs  mod.rs  mod_test.rs  orgs.rs  repos.rs  tokens.rs
src/db/: models.rs  repository.rs  schema.rs
